# LestaCourse

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: github-actions.yml
FinalProject/: CMakeLists.txt  common.hxx  map.cxx  map.hxx  mirror.cxx  mirror.hxx  mirrorGame.cxx  mirrorGame.hxx  player.cxx  player.hxx
FinalProject/Assets/: hi  map1.txt  map2.txt  map3.txt  map4.txt  map6.txt
FinalProject/Assets/Shaders/: exitFS.txt  fs.txt  mirrorFS.txt  playerFS.txt  roadFS.txt  tileVS.txt  vs.txt
Task1-HelloWorld/: CMakeLists.txt  HelloWorld.cxx
Task1-HelloWorld/.ccls-cache/@@home@ivan@Work@Projects@LestaTasks@Task1-HelloWorld/: @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@__stddef_max_align_t.h.blob  @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@stdarg.h.blob  @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@stddef.h.blob  @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@11@backward@binders.h.blob  @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@basic_ios.h.blob  @usr@include@c++@11@bits@basic_ios.tcc.blob  @usr@include@c++@11@bits@basic_string.h.blob  @usr@include@c++@11@bits@basic_string.tcc.blob  @usr@include@c++@11@bits@char_traits.h.blob  @usr@include@c++@11@bits@charconv.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cpp_type_traits.h.blob  @usr@include@c++@11@bits@cxxabi_forced.h.blob  @usr@include@c++@11@bits@cxxabi_init_exception.h.blob  @usr@include@c++@11@bits@exception.h.blob  @usr@include@c++@11@bits@exception_defines.h.blob  @usr@include@c++@11@bits@exception_ptr.h.blob  @usr@include@c++@11@bits@functexcept.h.blob  @usr@include@c++@11@bits@functional_hash.h.blob  @usr@include@c++@11@bits@hash_bytes.h.blob  @usr@include@c++@11@bits@ios_base.h.blob  @usr@include@c++@11@bits@istream.tcc.blob  @usr@include@c++@11@bits@locale_classes.h.blob  @usr@include@c++@11@bits@locale_classes.tcc.blob  @usr@include@c++@11@bits@locale_facets.h.blob  @usr@include@c++@11@bits@locale_facets.tcc.blob  @usr@include@c++@11@bits@localefwd.h.blob  @usr@include@c++@11@bits@memoryfwd.h.blob  @usr@include@c++@11@bits@move.h.blob  @usr@include@c++@11@bits@nested_exception.h.blob  @usr@include@c++@11@bits@ostream.tcc.blob  @usr@include@c++@11@bits@ostream_insert.h.blob  @usr@include@c++@11@bits@postypes.h.blob  @usr@include@c++@11@bits@predefined_ops.h.blob  (+137 more)
Task1-HelloWorld/.ccls-cache/@home@ivan@Work@Projects@LestaTasks@Task1-HelloWorld/: HelloWorld.cxx.blob
Task1.2-HelloWorldLib/: CMakeLists.txt  main.cxx
Task1.2-HelloWorldLib/.ccls-cache/@@home@ivan@Work@Projects@LestaTasks@Task1.2-HelloWorldLib/: @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@__stddef_max_align_t.h.blob  @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@stdarg.h.blob  @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@stddef.h.blob  @snap@ccls@90@usr@lib@llvm-7@lib@clang@7.0.0@include@stdint.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@c++@11@backward@binders.h.blob  @usr@include@c++@11@bits@alloc_traits.h.blob  @usr@include@c++@11@bits@allocator.h.blob  @usr@include@c++@11@bits@basic_ios.h.blob  @usr@include@c++@11@bits@basic_ios.tcc.blob  @usr@include@c++@11@bits@basic_string.h.blob  @usr@include@c++@11@bits@basic_string.tcc.blob  @usr@include@c++@11@bits@char_traits.h.blob  @usr@include@c++@11@bits@charconv.h.blob  @usr@include@c++@11@bits@concept_check.h.blob  @usr@include@c++@11@bits@cpp_type_traits.h.blob  @usr@include@c++@11@bits@cxxabi_forced.h.blob  @usr@include@c++@11@bits@cxxabi_init_exception.h.blob  @usr@include@c++@11@bits@exception.h.blob  @usr@include@c++@11@bits@exception_defines.h.blob  @usr@include@c++@11@bits@exception_ptr.h.blob  @usr@include@c++@11@bits@functexcept.h.blob  @usr@include@c++@11@bits@functional_hash.h.blob  @usr@include@c++@11@bits@hash_bytes.h.blob  @usr@include@c++@11@bits@ios_base.h.blob  @usr@include@c++@11@bits@istream.tcc.blob  @usr@include@c++@11@bits@locale_classes.h.blob  @usr@include@c++@11@bits@locale_classes.tcc.blob  @usr@include@c++@11@bits@locale_facets.h.blob  @usr@include@c++@11@bits@locale_facets.tcc.blob  @usr@include@c++@11@bits@localefwd.h.blob  @usr@include@c++@11@bits@memoryfwd.h.blob  @usr@include@c++@11@bits@move.h.blob  @usr@include@c++@11@bits@nested_exception.h.blob  @usr@include@c++@11@bits@ostream.tcc.blob  @usr@include@c++@11@bits@ostream_insert.h.blob  @usr@include@c++@11@bits@postypes.h.blob  @usr@include@c++@11@bits@predefined_ops.h.blob  (+137 more)
Task1.2-HelloWorldLib/.ccls-cache/@home@ivan@Work@Projects@LestaTasks@Task1.2-HelloWorldLib/: lib@include@printLib.hxx.blob  lib@src@printLib.cxx  lib@src@printLib.cxx.blob  main.cxx  main.cxx.blob
Task1.2-HelloWorldLib/lib/: CMakeLists.txt
Task1.2-HelloWorldLib/lib/include/: printLib.hxx
Task1.2-HelloWorldLib/lib/src/: printLib.cxx
Task2-SDL3/: CMakeLists.txt  main.cxx
Task3-Engine/: CMakeLists.txt  canvas.cxx  canvas.hxx  consoleGame.cxx  consoleGame.hxx  emulator.cxx  emulator.hxx  engine.cxx  engine.hxx  game.cxx  game.hxx  helper.hxx  main.cxx
Task3-Engine/OpenGL/: elementBuffer.cxx  elementBuffer.hxx  glDebug.cxx  glDebug.hxx  shader.cxx  shader.hxx  texture.cxx  texture.hxx  vao.cxx  vao.hxx  vertexBuffer.cxx  vertexBuffer.hxx
Task3-Engine/Renderers/: glRenderer.cxx  glRenderer.hxx  iRenderer.hxx  lineRenderer.cxx  lineRenderer.hxx  triangleRenderer.cxx  triangleRenderer.hxx
Task3-Engine/Shaders/: fs.txt  textureFS.txt  vs.txt
Task3-Engine/glad/include/glad/: glad.h
Task3-Engine/glad/src/: glad.c
Task3-Game/: CMakeLists.txt  ConsoleGame.cxx  ConsoleGame.hxx  consoleGame.cxx  consoleGame.hxx  main.cxx
Task4-RenderBasics/: CMakeLists.txt  renderBasics.cxx  renderBasics.hxx
Task5-OpenGL/: CMakeLists.txt  glTest.cxx  glTest.hxx
