cmake_minimum_required(VERSION 3.22)

project(lesta-course)

# simple hello world
add_subdirectory(Task1-HelloWorld)
# hellow world with static and dynamic library
add_subdirectory(Task1.2-HelloWorldLib)
# program which uses SDL3 lib
add_subdirectory(Task2-SDL3)
# sdl wrapper

add_subdirectory(Task3-Engine)
#add_subdirectory(Task3-Game)